<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Software Engineering"
        android:id="@+id/discipline"
        android:layout_centerHorizontal="true"
        android:textSize="22dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:choiceMode="singleChoice"
        android:listSelector="@android:color/darker_gray"
        android:id="@+id/student_list_view"
        android:layout_below="@id/discipline"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_below="@id/student_list_view"
        android:id="@+id/studentPan">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            android:id="@+id/stud_nameTV"
            android:hint="@string/student_name"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            android:id="@+id/stud_numberTV"
            android:hint="@string/student_number"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:id="@+id/button_view"
        android:layout_below="@id/studentPan"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            android:id="@+id/courseTV"
            android:text="@string/allcourses"
            android:layout_marginTop="10dp" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            android:id="@+id/courseSpinner"
            android:layout_marginTop="10dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:onClick="addClicked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_add"
            android:id="@+id/addButt" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:onClick="removeClicked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_remove"
            android:id="@+id/removeButt" />
    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:choiceMode="singleChoice"
        android:listSelector="@android:color/darker_gray"
        android:layout_below="@id/button_view"
        android:id="@+id/course_list_view"/>

</RelativeLayout>